Segunda frase motivacional

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Veja abaixo a frase motivacional do dia</h1>
-    <p>Acredite em si mesmo e você será imparável.</p>
+    
+    <ul>
+        <li>Acredite em si mesmo e você será imparável.</li>
+        <li>Cada dia é uma nova oportunidade para brilhar.</li>
+        
+    </ul>
 </body>
 </html>
