--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li>Acredite em si mesmo e você será imparável.</li>
         <li>Cada dia é uma nova oportunidade para brilhar.</li>
-        
+        <li>Se você pode sonhar, pode realizar.</li>
     </ul>
 </body>
 </html>
